--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
 	"require": {
 		"php": "^7.4",
 		"ext-json": "^7.4",
+		"moneyphp/money": "^3.3",
 		"symfony/symfony": "^5.0"
 	},
 	"require-dev": {
