--- a/config/routes/routes.yaml
+++ b/config/routes/routes.yaml
@@ -1,4 +1,4 @@
 get-discounts:
     methods: POST
     path: /get-discounts
-    controller: Rainbow\Discounts\Controllers\DiscountsController::getDiscounts
+    controller: Rainbow\Discounts\Api\Controllers\DiscountsController::getDiscounts
