--- a/config/dev/services.yaml
+++ b/config/dev/services.yaml
@@ -3,4 +3,4 @@ services:
         autowire: true
         autoconfigure: true
 
-    Rainbow\Discounts\Api\Framework\FormatJsonResponseListener: ~
+    Rainbow\Discounts\Application\Framework\PrettyPrintJsonResponseListener: ~
